Fixed #199
Changed login window in login.css to no longer get "squished" on a smaller window by changing the margin-right in .login-form-wrapper to be the relative 45wh instead of the absolute 1111px.

Changed signup window in signup.css to no longer get *as* "squished" on a smaller window by changing the gap in .signup-form.form-group and margin-right in .signup-container to relative values.

--- a/MajorHelp/static/css/signup/signup.css
+++ b/MajorHelp/static/css/signup/signup.css
@@ -23,7 +23,7 @@ body {
 /* Header Styling */
 .signup-header {
     text-align: left;
-    margin-right: 1120px;
+    margin-right: 45wh;
 }
 
 .signup-header h1 {
@@ -42,7 +42,7 @@ body {
 /* Form Group Styling */
 .signup-form .form-group {
     display: flex;
-    gap: 110px;
+    gap: 4vw;
     width: 100%;
 }
 
